--- a/ui/package.json
+++ b/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simple-vote",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -24,6 +24,7 @@
     "bootstrap": "4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "hashids": "^1.1.1",
     "markdown-it": "^8.3.1",
     "ngx-bootstrap": "^1.6.6",
     "ngx-cookie": "^1.0.0",
