--- a/ui/package.json
+++ b/ui/package.json
@@ -28,6 +28,7 @@
     "markdown-it": "^8.3.1",
     "ngx-bootstrap": "^1.6.6",
     "ngx-cookie": "^1.0.0",
+    "randomcolor": "^0.5.3",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
