--- a/ui/package.json
+++ b/ui/package.json
@@ -22,13 +22,14 @@
     "@angular/router": "^4.0.0",
     "angular2-jwt": "^0.2.2",
     "bootstrap": "4.0.0-alpha.6",
+    "moment": "^2.19.1",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "hashids": "^1.1.1",
     "markdown-it": "^8.3.1",
     "ngx-bootstrap": "^1.6.6",
     "randomcolor": "^0.5.3",
-    "rxjs": "^5.1.0",
+    "rxjs": "^5.4.2",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
@@ -48,6 +49,6 @@
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
-    "typescript": "~2.2.0"
+    "typescript": "2.3.4"
   }
 }
