--- a/ui/package.json
+++ b/ui/package.json
@@ -21,7 +21,7 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "angular2-jwt": "^0.2.2",
-    "bootstrap": "4.0.0-alpha.6",
+    "bootswatch": "^4.0.0-beta.2",
     "moment": "^2.19.1",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
@@ -33,7 +33,7 @@
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "^1.3.2",
+    "@angular/cli": "^1.5.5",
     "@angular/compiler-cli": "^4.0.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
