--- a/ui/package.json
+++ b/ui/package.json
@@ -12,14 +12,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
+    "@angular/common": "^5.1.0",
+    "@angular/compiler": "^5.1.0",
+    "@angular/core": "^5.1.0",
+    "@angular/forms": "^5.1.0",
+    "@angular/http": "^5.1.0",
+    "@angular/platform-browser": "^5.1.0",
+    "@angular/platform-browser-dynamic": "^5.1.0",
+    "@angular/router": "^5.1.0",
     "angular2-jwt": "^0.2.2",
     "bootswatch": "^4.0.0-beta.2",
     "moment": "^2.19.1",
@@ -27,14 +27,14 @@
     "font-awesome": "^4.7.0",
     "hashids": "^1.1.1",
     "markdown-it": "^8.3.1",
-    "ngx-bootstrap": "^1.6.6",
+    "ngx-bootstrap": "^2.0.0-beta.11",
     "randomcolor": "^0.5.3",
-    "rxjs": "^5.4.2",
+    "rxjs": "^5.5.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "^1.5.5",
-    "@angular/compiler-cli": "^4.0.0",
+    "@angular/cli": "^1.6.1",
+    "@angular/compiler-cli": "^5.1.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
     "codelyzer": "~2.0.0",
@@ -46,9 +46,9 @@
     "karma-coverage-istanbul-reporter": "^0.2.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.0",
+    "protractor": "~4.0.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
-    "typescript": "2.3.4"
+    "typescript": "2.4.2"
   }
 }
