--- a/ui/package.json
+++ b/ui/package.json
@@ -27,7 +27,7 @@
     "font-awesome": "^4.7.0",
     "hashids": "^1.1.1",
     "markdown-it": "^8.3.1",
-    "ngx-bootstrap": "^2.0.0-beta.11",
+    "ngx-bootstrap": "^2.0.0-rc.0",
     "randomcolor": "^0.5.3 ",
     "rxjs": "^5.5.0",
     "zone.js": "^0.8.4"
