--- a/ui/package.json
+++ b/ui/package.json
@@ -22,11 +22,12 @@
     "@angular/router": "^5.1.1",
     "angular2-jwt": "^0.2.2",
     "bootswatch": "^4.0.0-beta.2",
-    "moment": "^2.19.1",
+    "clipboard": "^1.7.1",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "hashids": "^1.1.1",
     "markdown-it": "^8.3.1",
+    "moment": "^2.19.1",
     "ngx-bootstrap": "^2.0.0-rc.0",
     "randomcolor": "^0.5.3 ",
     "rxjs": "^5.5.0",
