Adding flowchat style login. Fixes #58.

--- a/service/pom.xml
+++ b/service/pom.xml
@@ -123,6 +123,12 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.jasypt</groupId>
+			<artifactId>jasypt</artifactId>
+			<version>1.9.2</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
 			<groupId>com.zaxxer</groupId>
 			<artifactId>HikariCP</artifactId>
 			<version>3.1.0</version>
