--- a/ui/package.json
+++ b/ui/package.json
@@ -12,15 +12,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "6.0.1",
-    "@angular/compiler": "6.0.1",
-    "@angular/core": "6.0.1",
-    "@angular/forms": "6.0.1",
-    "@angular/http": "6.0.1",
-    "@angular/platform-browser": "6.0.1",
-    "@angular/platform-browser-dynamic": "6.0.1",
-    "@angular/router": "6.0.1",
+    "@angular/animations": "^6.0.5",
+    "@angular/common": "^6.0.1",
+    "@angular/compiler": "^6.0.1",
+    "@angular/core": "^6.0.1",
+    "@angular/forms": "^6.0.1",
+    "@angular/http": "^6.0.1",
+    "@angular/platform-browser": "^6.0.1",
+    "@angular/platform-browser-dynamic": "^6.0.1",
+    "@angular/router": "^6.0.1",
     "@auth0/angular-jwt": "^2.0.0",
+    "angular2-toaster": "^4.0.1",
     "bootswatch": "^4.0.0-beta.2",
     "clipboard": "^1.7.1",
     "core-js": "^2.4.1",
@@ -36,8 +38,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.1",
-    "@angular/cli": "6.0.5",
-    "@angular/compiler-cli": "6.0.1",
+    "@angular/cli": "^6.0.7",
+    "@angular/compiler-cli": "^6.0.1",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
     "codelyzer": "~2.0.0",
