Trying new spark Version. Temporarily removing abstain button. #64, #60

--- a/service/pom.xml
+++ b/service/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" 
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.github.tchoulihan</groupId>
+	<groupId>com.github.dessalines</groupId>
 	<artifactId>simplevote</artifactId>
 	<version>1.0.0</version>
 	<properties>
@@ -191,7 +191,7 @@
 		<dependency>
 			<groupId>com.sparkjava</groupId>
 			<artifactId>spark-core</artifactId>
-			<version>2.5.5</version>
+			<version>2.7.1</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>slf4j-simple</artifactId>
