--- a/ui/package.json
+++ b/ui/package.json
@@ -23,7 +23,7 @@
     "@angular/router": "^6.0.1",
     "@auth0/angular-jwt": "^2.0.0",
     "angular2-toaster": "^4.0.1",
-    "bootswatch": "^4.0.0-beta.2",
+    "bootswatch": "^4.1.3",
     "clipboard": "^1.7.1",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
@@ -38,7 +38,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.1",
-    "@angular/cli": "^6.0.7",
+    "@angular/cli": "^6.1.0",
     "@angular/compiler-cli": "^6.0.1",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
