--- a/ui/package.json
+++ b/ui/package.json
@@ -4,7 +4,9 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
+    "prestart": "ts-node git.version.ts",
     "start": "ng serve",
+    "prebuild": "ts-node git.version.ts",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -52,7 +54,7 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "^5.3.2",
-    "ts-node": "~2.0.0",
+    "ts-node": "^7.0.1",
     "tslint": "~4.5.0",
     "typescript": "2.7.2"
   }
