--- a/ui/package.json
+++ b/ui/package.json
@@ -24,7 +24,7 @@
     "@angular/platform-browser-dynamic": "^6.1.7",
     "@angular/router": "^6.1.7",
     "@auth0/angular-jwt": "^2.0.0",
-    "angular2-toaster": "^4.0.1",
+    "angular2-toaster": "^6.1.0",
     "bootswatch": "^4.1.3",
     "clipboard": "^1.7.1",
     "core-js": "^2.4.1",
@@ -44,10 +44,10 @@
     "@angular/compiler-cli": "^6.1.7",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
-    "codelyzer": "~2.0.0",
+    "codelyzer": "^4.4.4",
     "jasmine-core": "~2.5.2",
     "jasmine-spec-reporter": "~3.2.0",
-    "karma": "^2.0.2",
+    "karma": "^3.0.0",
     "karma-chrome-launcher": "~2.0.0",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^0.2.0",
@@ -55,7 +55,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "^5.3.2",
     "ts-node": "^7.0.1",
-    "tslint": "~4.5.0",
-    "typescript": "2.7.2"
+    "tslint": "^5.11.0",
+    "typescript": "~2.7.0"
   }
 }
