--- a/ui/package.json
+++ b/ui/package.json
@@ -24,12 +24,13 @@
     "@angular/platform-browser-dynamic": "^6.1.7",
     "@angular/router": "^6.1.7",
     "@auth0/angular-jwt": "^2.0.0",
+    "@types/hashids": "^1.0.30",
     "angular2-toaster": "^6.1.0",
     "bootswatch": "^4.1.3",
     "clipboard": "^1.7.1",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
-    "hashids": "^1.1.1",
+    "hashids": "^1.2.2",
     "markdown-it": "^8.3.1",
     "moment": "^2.22.1",
     "ngx-bootstrap": "^2.0.5",
